--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "up": "ncu -u && npm install && npm update && npm audit fix"
   },
-  "author": "Sefinek#5905",
+  "author": "Sefinek",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
-    "helmet": "^4.6.0"
+    "express": "^4.18.1",
+    "helmet": "^5.0.2"
   }
 }
