--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vdolce.skiffybot.xyz",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.0.1",
+  "description": "Hehehe papież tańczy",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -10,6 +10,7 @@
   "author": "Sefinek",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "helmet": "^5.0.2"
   }
