--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "papiez-tanczy",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "Hehehe papież tańczy.",
   "main": "index.js",
   "scripts": {
@@ -10,6 +10,7 @@
   "author": "Sefinek",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "helmet": "^5.0.2"
