--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "papiez-tanczy",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Hehehe papież tańczy.",
   "main": "index.js",
   "scripts": {
@@ -12,7 +12,9 @@
   "dependencies": {
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "helmet": "^5.0.2"
+    "helmet": "^5.0.2",
+    "serve-favicon": "^2.5.0"
   }
 }
