--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "helmet": "^5.0.2",
+    "morgan": "^1.10.0",
     "serve-favicon": "^2.5.0"
   }
 }
