--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "up": "ncu -u && npm install && npm update && npm audit fix"
   },
-  "author": "Sefinek",
+  "author": "Sefinek <contact@sefinek.fun>",
   "license": "MIT",
   "dependencies": {
     "axios": "^0.27.2",
