--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "papiez-tanczy",
   "version": "1.2.1",
-  "description": "Hehehe papież tańczy.",
+  "description": "Hehe papież tańczy.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
