--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "papiez-tanczy",
-  "version": "1.2.2",
+  "version": "1.2.3",
   "description": "Hehe papież tańczy.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "up": "ncu -u && npm install && npm update && npm audit fix",
+    "upg": "git pull && npm run up",
+    "upp": "npm run upg && pm2 restart papiez-tanczy"
   },
   "repository": {
     "type": "git",
@@ -27,5 +30,13 @@
   "bugs": {
     "url": "https://github.com/sefinek24/papiez-tanczy/issues"
   },
-  "homepage": "https://github.com/sefinek24/papiez-tanczy#readme"
+  "homepage": "https://github.com/sefinek24/papiez-tanczy#readme",
+  "dependencies": {
+    "dotenv": "^16.0.1",
+    "ejs": "^3.1.8",
+    "express": "^4.18.1",
+    "helmet": "^5.1.0",
+    "morgan": "^1.10.0",
+    "serve-favicon": "^2.5.0"
+  }
 }
