--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "lapanie",
     "kremowek"
   ],
-  "author": "Sefinek <contact@sefinek.fun>",
+  "author": "Sefinek (https://sefinek.net)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/sefinek24/catch-kremowka/issues"
