--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "catch-kremowka",
-  "version": "1.2.9",
+  "name": "kremowka.sefinek.net",
+  "version": "1.2.10",
   "description": "Symulator łapania papieskich kremówek.",
   "main": "index.js",
   "scripts": {
@@ -34,11 +34,11 @@
   },
   "homepage": "https://github.com/sefinek24/catch-kremowka#readme",
   "dependencies": {
-    "axios": "^1.1.3",
+    "axios": "^1.2.2",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "helmet": "^6.0.0",
+    "helmet": "^6.0.1",
     "morgan": "^1.10.0",
     "serve-favicon": "^2.5.0"
   }
